added tracker_filters (activities) and bmi_steps preparation scripts.

--- a/data_exploration/weights_filter.ipynb
+++ b/data_exploration/weights_filter.ipynb
@@ -958,7 +958,7 @@
     "len_before = len(weights_filter)\n",
     "weights_filter = weights_filter[-weights_filter.body_weight.isin(outliers)]\n",
     "printmd('* Number of outliers removed: {}'.format(len_before - len(weights_filter)))\n",
-    "printmd('* Number of remaining weights entried: {}'.format(len(weights_filter)))\n",
+    "printmd('* Number of remaining weights entries: {}'.format(len(weights_filter)))\n",
     "\n",
     "printmd('**Filtered Data:**')\n",
     "printmd('* _Max Weight:_ {}'.format(weights_filter['body_weight'].max()))\n",
