--- a/data_exploration/bmi_steps.ipynb
+++ b/data_exploration/bmi_steps.ipynb
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('../data/filtered/activities_filter.pickle', 'rb') as f:\n",
@@ -1117,7 +1119,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read users data\n",
