added visualizations charts and sample reports. updated read.me file.

--- a/data_exploration/tracker_filter.ipynb
+++ b/data_exploration/tracker_filter.ipynb
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('../data/tracker_all.pickle', 'rb') as f:\n",
